--- a/pert3/css/style.css
+++ b/pert3/css/style.css
@@ -1,16 +1,20 @@
-table, th, td {
+table, th,td {
     border: 1px solid rgba(0, 0, 0, 0.212);
-    
-    border-collapse: collapse;
+   
     padding: 8px;
     text-align: left;
 }
+td{
+    border: none;
+}
 th {
     background-color: #f2f2f2;
+    border: none;
 }
 body,html{
     height: 100%;
     margin: 0;
+    font-family: "Poppins", serif;
 }
 .utama{
     min-height: 100vh;
@@ -18,6 +22,7 @@ body,html{
     justify-content: center;
     align-items: center;
 }
-h2{
-    color: red;
+.table2{
+    max-height: 200px;
+    overflow-y: auto;
 }
