--- a/pert3/css/style.css
+++ b/pert3/css/style.css
@@ -1,15 +1,19 @@
 table, th,td {
     border: 1px solid rgba(0, 0, 0, 0.212);
-   
-    padding: 8px;
     text-align: left;
 }
 td{
     border: none;
+    padding: 8px;
 }
 th {
     background-color: #f2f2f2;
     border: none;
+    padding: 8px;
+    position: sticky;
+    top: -2px;
+    z-index: 100;
+    margin: 0;
 }
 body,html{
     height: 100%;
@@ -21,8 +25,17 @@ body,html{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 .table2{
     max-height: 200px;
     overflow-y: auto;
+}
+.input-group{
+    width: 50% !important;
+    height: 10%;
+}
+table{
+    border-collapse: separate;
+    border-spacing: 0;
 }
